# mlgidBASE

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml  tutorials.yml
docs/: File Format.rst  Quick Start.rst  conf.py  index.rst  installation_mlgid.md  requirements.txt  tutorials_toctree.rst
docs/tutorials/: Quick start.md  output_file_format.md  tutorial_01_initialization.ipynb  tutorial_02_detection.ipynb  tutorial_03_fitting.ipynb  tutorial_04_matching.ipynb  tutorial_05_from_memory.ipynb  tutorial_06_visualization.ipynb  tutorial_07_peak_operations.ipynb  tutorial_08_get_data.ipynb
example/: dino.yaml  gixs_h5_viewer.py  mlgidbase_example.ipynb
mlgidbase/: __init__.py  main.py  mlgiddetect_functions.py  mlgidmatch_functions.py  nexus_operations.py  peak_operations.py  pygid_functions.py  pygidfit_functions.py  visualization.py  widgets.py
tests/: test_fitting.py  test_mlgidbase.py
