[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlgidbase"
version = "0.0.1"
description = "A comprehensive toolbox for grazing-incidence diffraction"
readme = { file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Ainur Abukaev", email = "ainurabukaev@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "pygid>=0.2.6",
    "mlgiddetect>=0.2.1",
    "pygidfit>=0.1.2",
    "mlgidmatch>=0.1.1",

]

[project.urls]
Homepage = "https://github.com/mlgid-project/mlgidBASE"
#
#[project.optional-dependencies]
#test = [
#    "pytest>=7.0.0",
#    "pytest-cov>=4.0.0",
#    "pytest-xdist>=3.0.0",
#    "pytest-mock>=3.10.0"
#]

[tool.setuptools.packages.find]
where = ["."]
