[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlgidbase"
version = "0.1.2"
description = "A comprehensive toolbox for grazing-incidence diffraction"
readme = { file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Ainur Abukaev", email = "ainurabukaev@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "pygid==0.2.8",
    "mlgiddetect==0.2.2",
    "pygidfit==0.1.3",
    "mlgidmatch==0.1.2",

]

[project.urls]
Homepage = "https://github.com/mlgid-project/mlgidBASE"

[tool.setuptools.packages.find]
where = ["."]
